Update Jajiga notebook: modify execution counts, enhance output messages, and adjust model parameters for improved performance and clarity. Update result and submission files with new data.

--- a/Q7/notebook/Jajiga.ipynb
+++ b/Q7/notebook/Jajiga.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "rJuhMbbHY7-f"
       },
@@ -24,17 +24,29 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0:\tlearn: 0.0278019\ttest: 0.0281346\tbest: 0.0281346 (0)\ttotal: 4.28ms\tremaining: 1m 25s\n",
-            "200:\tlearn: 0.7139532\ttest: 0.6257805\tbest: 0.6257805 (200)\ttotal: 710ms\tremaining: 1m 9s\n",
-            "400:\tlearn: 0.7980268\ttest: 0.6550087\tbest: 0.6550087 (400)\ttotal: 1.37s\tremaining: 1m 7s\n",
-            "600:\tlearn: 0.8513939\ttest: 0.6658825\tbest: 0.6658825 (600)\ttotal: 2.04s\tremaining: 1m 5s\n",
-            "800:\tlearn: 0.8876937\ttest: 0.6686367\tbest: 0.6687881 (794)\ttotal: 2.75s\tremaining: 1m 5s\n",
-            "1000:\tlearn: 0.9144385\ttest: 0.6705398\tbest: 0.6705811 (999)\ttotal: 3.45s\tremaining: 1m 5s\n",
-            "1200:\tlearn: 0.9323699\ttest: 0.6720364\tbest: 0.6730269 (1108)\ttotal: 4.12s\tremaining: 1m 4s\n",
-            "1400:\tlearn: 0.9463018\ttest: 0.6727193\tbest: 0.6730269 (1108)\ttotal: 4.82s\tremaining: 1m 4s\n",
-            "1600:\tlearn: 0.9571076\ttest: 0.6737674\tbest: 0.6738267 (1599)\ttotal: 5.5s\tremaining: 1m 3s\n",
-            "1800:\tlearn: 0.9651906\ttest: 0.6737151\tbest: 0.6741428 (1753)\ttotal: 6.17s\tremaining: 1m 2s\n",
-            "2000:\tlearn: 0.9722151\ttest: 0.6743980\tbest: 0.6744128 (1999)\ttotal: 6.86s\tremaining: 1m 1s\n"
+            "0:\tlearn: 0.0209511\ttest: 0.0211828\tbest: 0.0211828 (0)\ttotal: 3.27ms\tremaining: 10m 54s\n",
+            "200:\tlearn: 0.6724326\ttest: 0.6038210\tbest: 0.6038210 (200)\ttotal: 653ms\tremaining: 10m 48s\n",
+            "400:\tlearn: 0.7616568\ttest: 0.6375244\tbest: 0.6375527 (398)\ttotal: 1.32s\tremaining: 10m 57s\n",
+            "600:\tlearn: 0.8137467\ttest: 0.6530863\tbest: 0.6530863 (600)\ttotal: 1.99s\tremaining: 10m 59s\n",
+            "800:\tlearn: 0.8511390\ttest: 0.6602193\tbest: 0.6602454 (799)\ttotal: 2.63s\tremaining: 10m 54s\n",
+            "1000:\tlearn: 0.8825156\ttest: 0.6645436\tbest: 0.6645478 (999)\ttotal: 3.28s\tremaining: 10m 51s\n",
+            "1200:\tlearn: 0.9044940\ttest: 0.6679228\tbest: 0.6680291 (1198)\ttotal: 3.94s\tremaining: 10m 52s\n",
+            "1400:\tlearn: 0.9216868\ttest: 0.6702318\tbest: 0.6705286 (1393)\ttotal: 4.6s\tremaining: 10m 51s\n",
+            "1600:\tlearn: 0.9347831\ttest: 0.6710639\tbest: 0.6712746 (1578)\ttotal: 5.25s\tremaining: 10m 50s\n",
+            "1800:\tlearn: 0.9448567\ttest: 0.6714452\tbest: 0.6719140 (1706)\ttotal: 5.89s\tremaining: 10m 48s\n",
+            "2000:\tlearn: 0.9535524\ttest: 0.6721598\tbest: 0.6721868 (1999)\ttotal: 6.55s\tremaining: 10m 48s\n",
+            "2200:\tlearn: 0.9607979\ttest: 0.6730582\tbest: 0.6730582 (2200)\ttotal: 7.2s\tremaining: 10m 46s\n",
+            "2400:\tlearn: 0.9662456\ttest: 0.6727970\tbest: 0.6731678 (2213)\ttotal: 7.87s\tremaining: 10m 47s\n",
+            "2600:\tlearn: 0.9711785\ttest: 0.6727847\tbest: 0.6731678 (2213)\ttotal: 8.54s\tremaining: 10m 48s\n",
+            "Stopped by overfitting detector  (500 iterations wait)\n",
+            "\n",
+            "bestTest = 0.6731678493\n",
+            "bestIteration = 2213\n",
+            "\n",
+            "Shrink model to first 2214 iterations.\n",
+            "Validation R2: 0.5727  -> approx score 143.2\n",
+            "Saved submission to /Users/taher/Projects/data-processing–preliminary  /Q7/notebook/submission.csv\n",
+            "Wrote /Users/taher/Projects/data-processing–preliminary  /Q7/notebook/result.zip\n"
           ]
         }
       ],
@@ -271,8 +283,8 @@
         "valid_pool = Pool(X_va, y_va_log, cat_features=cat_idx, text_features=text_idx)\n",
         "\n",
         "model = CatBoostRegressor(\n",
-        "    iterations=(20000 if FAST_MODE else 8000),\n",
-        "    learning_rate=(0.04 if FAST_MODE else 0.035),\n",
+        "    iterations=(200000 if FAST_MODE else 800000),\n",
+        "    learning_rate=(0.03 if FAST_MODE else 0.035),\n",
         "    depth=(8 if FAST_MODE else 12),\n",
         "    l2_leaf_reg=(4.0 if FAST_MODE else 6.0),\n",
         "    loss_function=\"RMSE\",\n",
@@ -309,12 +321,12 @@
         "full_pool = Pool(X_full, np.log1p(y), cat_features=cat_idx, text_features=text_idx)\n",
         "final_model = CatBoostRegressor(\n",
         "    iterations=int(best_it),\n",
-        "    learning_rate=(0.06 if FAST_MODE else 0.035),\n",
-        "    depth=(6 if FAST_MODE else 8),\n",
+        "    learning_rate=(0.03 if FAST_MODE else 0.035),\n",
+        "    depth=(8 if FAST_MODE else 8),\n",
         "    l2_leaf_reg=(4.0 if FAST_MODE else 6.0),\n",
         "    loss_function=\"RMSE\",\n",
         "    subsample=0.85,\n",
-        "    rsm=(0.95 if FAST_MODE else 0.9),\n",
+        "    rsm=(0.9 if FAST_MODE else 0.8),\n",
         "    random_seed=RANDOM_STATE,\n",
         "    allow_writing_files=False,\n",
         "    verbose=False,\n",
